capcut_server.log
Traceback (most recent call last):
  File "capcut_server.py", line 28, in <module>
    from save_draft_impl import save_draft_impl, query_task_status, query_script_impl
  File "/home/cat/CapCutAPI/save_draft_impl.py", line 719
    logger.info("Checking track segment time range conflicts...")
    ^
IndentationError: unexpected unindent
